--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,6 @@
     <color name="dark_dirt_plant">#736F3C</color>
     <color name="white_plant">#F2F2F2</color>
     <color name="black_plant">#0D0D0D</color>
+    <color name="unselected_grey">#ded6d6</color>
 
 </resources>
