Added view model factory and fixed the adapter and garden class to properly reflect the item_garden_list layout

--- a/app/src/main/res/layout/item_garden_list.xml
+++ b/app/src/main/res/layout/item_garden_list.xml
@@ -57,7 +57,7 @@
                     tools:text="4 x 12 ft" />
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/textViewLighting"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
