--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,15 +8,14 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-
-    <color name="dark_plant">#678C30</color>
-    <color name="alt_plant">#59A656</color>
-    <color name="seedling_plant">#80BF55</color>
-    <color name="light_plant">#8DBF41</color>
-    <color name="dirt_plant">#A6A056</color>
-    <color name="dark_dirt_plant">#736F3C</color>
-    <color name="white_plant">#F2F2F2</color>
-    <color name="black_plant">#0D0D0D</color>
-    <color name="unselected_grey">#ded6d6</color>
+<!--    Custom Colours-->
+    <color name="primaryColor">#80bf55</color>
+    <color name="primaryLightColor">#b2f284</color>
+    <color name="primaryDarkColor">#4f8e26</color>
+    <color name="secondaryColor">#b39ddb</color>
+    <color name="secondaryLightColor">#e6ceff</color>
+    <color name="secondaryDarkColor">#836fa9</color>
+    <color name="primaryTextColor">#000000</color>
+    <color name="secondaryTextColor">#000000</color>
 
 </resources>
