--- a/app/src/main/res/layout/item_garden_list.xml
+++ b/app/src/main/res/layout/item_garden_list.xml
@@ -10,7 +10,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/dark_plant"
+        android:background="@drawable/garden_item_select"
         app:cardCornerRadius="2dp"
         app:contentPadding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
