--- a/app/src/main/res/layout/activity_garden_info.xml
+++ b/app/src/main/res/layout/activity_garden_info.xml
@@ -14,6 +14,20 @@
         tools:context=".GardenInfoActivity">
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/extendedFABallGardens"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/view_all_gardens"
+            app:icon="@drawable/back_suggest_icon"
+            android:contentDescription="@string/view_all_gardens"
+            app:layout_constraintBottom_toTopOf="@+id/imageViewSeedling2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.081"
+            android:layout_marginTop="@dimen/margin_top_100"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/extendedFabSaveGarden"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -30,11 +44,10 @@
             android:id="@+id/imageViewSeedling2"
             android:layout_width="@dimen/adding_image_width"
             android:layout_height="@dimen/adding_image_height"
-            android:layout_marginTop="@dimen/margin_top_100"
-            android:layout_marginBottom="@dimen/image_buttom_margin"
+            android:layout_marginTop="50dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/extendedFABallGardens"
             app:srcCompat="@drawable/little_seedling" />
 
         <TableLayout
@@ -121,6 +134,8 @@
                     android:entries="@array/lightTypes"/>
             </TableRow>
         </TableLayout>
+
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
